<resources>
    <string name="app_name">MenuApp</string>
    <string name="_0_0">0.0</string>

    <string name="ratings">ratings:</string>
    <string name="_0">0</string>
    <string name="add_name_cafe">Add Name Cafe</string>
    <string name="add_img_food">add_img_food</string>
    <string name="add_name_food">Add Name Food</string>
    <string name="add_info_in_food">Add Info in Food</string>
    <string name="add">Add</string>
</resources>