<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMenuActivity"
    android:background="#917CCF">

    <ImageView
        android:id="@+id/add_img_food"
        android:layout_width="298dp"
        android:layout_height="175dp"
        android:layout_marginTop="4dp"
        android:clickable="true"
        android:contentDescription="@string/add_img_food"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_vegetar" />
    <EditText
        android:id="@+id/add_name_cafe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/add_img_food"
        app:layout_constraintTop_toBottomOf="@id/add_img_food"
        app:layout_constraintEnd_toEndOf="@id/add_img_food"
        android:layout_marginTop="16dp"
        android:hint="@string/add_name_cafe"
        android:inputType="text"
        android:textSize="24sp"
        android:textColor="@color/colorRed"
        android:autofillHints="" />
    <EditText
        android:id="@+id/add_name_food"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/add_name_cafe"
        app:layout_constraintTop_toBottomOf="@id/add_name_cafe"
        app:layout_constraintEnd_toEndOf="@id/add_name_cafe"
        android:layout_marginTop="16dp"
        android:hint="@string/add_name_food"
        android:inputType="text"
        android:textSize="24sp"
        android:textColor="@color/colorRed"
        android:autofillHints="" />
    <EditText
        android:id="@+id/add_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/add_name_food"
        app:layout_constraintTop_toBottomOf="@id/add_name_food"
        app:layout_constraintEnd_toEndOf="@id/add_name_food"
        android:layout_marginTop="16dp"
        android:hint="@string/add_info_in_food"
        android:inputType="text"
        android:textSize="24sp"
        android:textColor="@color/colorRed"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_info" />
</androidx.constraintlayout.widget.ConstraintLayout>